# personal-agent

./: .env.example  .gitignore  AI.md  CLAUDE.md  Project-Idea.md  README.md  SOUL.md  pyproject.toml
backend/app/: config.py  logging_config.py  main.py
backend/tests/: test_agent_loop.py  test_provider_anthropic.py  test_provider_ollama.py  test_provider_openai.py
docs/decisions/: 0001-tech-stack.md  0002-chat-transport.md  0003-agent-loop.md  0004-streaming-with-tools.md  0005-search-backend-ddgs.md  0006-fetch-url-tool.md  0007-llm-provider-abstraction.md  README.md
docs/design/: HLD.md  LLD.md  README.md
docs/learnings/: README.md  agent-loop-architecture.md  cors.md  frontend.md  message-journey-async.md  prefill-vs-decode.md  protocol-vs-abc.md  pytest-patterns.md  streaming-with-tools.md  typescript-and-vite-proxy.md
docs/sessions/: 2026-05-01-phase-0-foundations.md  2026-05-02-phase-1-chat-mvp.md  2026-05-03-lan-access-and-frontend-doc.md  2026-05-03-phase-2-agent-loop.md  2026-05-03-warmup-and-adr-0003.md  2026-05-04-streaming-restored.md  2026-05-05-design-docs.md  2026-05-10-fetch-url-and-list-files.md  2026-05-10-token-stats-ui.md  2026-05-10-web-search-tool.md  2026-05-16-llm-provider-abstraction.md  2026-05-16-ui-polish-num-ctx-loop-tests.md  README.md
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  (+1 more)
scripts/: smoke_agent.py  smoke_agent_fetch_url.py  smoke_agent_web_search.py  smoke_chat_ws.py  smoke_chat_ws_proxy.py  smoke_fetch_url.py  smoke_list_files.py  smoke_ollama.py  smoke_provider.py  smoke_web_search.py
(+17 files in other folders)
