[project]
name = "personal-assistant"
version = "0.1.0"
description = "Local-first agentic personal assistant running on CPU"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.2",
    "fastapi>=0.136.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
# Project isn't installed as a package yet (per CLAUDE.md conventions),
# so let pytest pick up backend.app.* by adding the repo root to sys.path.
pythonpath = ["."]
testpaths = ["backend/tests"]
# Treat every `async def test_*` as an asyncio test without a decorator.
asyncio_mode = "auto"
